--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.4",
         "livewire/volt": "^1.7.0",
+        "spatie/laravel-data": "^4.17",
         "spatie/laravel-permission": "^6.16",
         "yoeunes/toastr": "^3.1"
     },
