--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "flowbite": "^3.1.2",
-        "jquery": "^3.7.1"
+        "jquery": "^3.7.1",
+        "trix": "^2.1.15"
     }
 }
