--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.2",
         "atomescrochus/laravel-string-similarities": "^2.1",
         "blade-ui-kit/blade-heroicons": "^2.6",
+        "intervention/image-laravel": "^1.5",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.4",
