--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "cropperjs": "^1.6.2",
         "flowbite": "^3.1.2",
         "jquery": "^3.7.1",
+        "moment": "^2.30.1",
+        "pikaday": "^1.8.2",
         "trix": "^2.1.15"
     }
 }
