--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.4",
         "livewire/volt": "^1.7.0",
+        "php-flasher/flasher-laravel": "^2.4",
         "predis/predis": "^3.2",
         "spatie/laravel-data": "^4.17",
         "spatie/laravel-permission": "^6.16",
