--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "predis/predis": "^3.2",
         "spatie/laravel-data": "^4.17",
         "spatie/laravel-permission": "^6.16",
-        "spatie/laravel-sitemap": "^7.3"
+        "spatie/laravel-sitemap": "^7.3",
+        "stevebauman/purify": "^6.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
